--- a/thankyou1.css
+++ b/thankyou1.css
@@ -115,6 +115,7 @@
 
 .footer{
 	margin-left: 20%;
+	margin-top: 150px;
 }
 
 .footer img{
@@ -149,7 +150,6 @@ h3 {
 	font-size:50px;
   text-transform: uppercase;
   letter-spacing: 10px;
-  margin: 0 0 150px 0;
 	color:#4F4E4E;
   }
 
@@ -163,12 +163,11 @@ h4{
 	margin: 40px 0 30px 0;
 
 }
-p {
+p{
 	font-family: 'Cantarell', sans-serif;
 	font-size: 30px;
 	color:#4F4E4E;
-	margin: 0 0 100px 0;
-	}
+}
 
 button{
 	background: transparent;
@@ -287,7 +286,7 @@ img {vertical-align: middle;}
 
 .gallery img {
     width: 400px;
-    height: auto;
+    height: 300px;
 		margin:2px;
 }
 
@@ -298,4 +297,20 @@ img {vertical-align: middle;}
 mark{
 	background-color: #BFBEBE;
 	color:white;
+}
+
+.leftNote{
+	float:left;
+	margin-left: 50px;
+	width:35%;
+}
+.rightNote{
+	float:right;
+	margin-right:25%;
+	width:35%;
+}
+.centerNote{
+	float:left;
+	margin-left: 20%;
+	margin-right: 40%;
 }
